--- a/views/quiz/quizResult.handlebars
+++ b/views/quiz/quizResult.handlebars
@@ -30,7 +30,7 @@
                         </div>
 
                         <div class="card-footer">
-                            <a href="/product/catalogue"><button>Buy Now</button></a>
+                            <a href="/product/itemDesc/{{id}}"><button>Buy Now</button></a>
                         </div>
                     </div>
                     {{/each}}
@@ -43,7 +43,7 @@
 <br>
 
 <div class="card-deck">
-    <div class="card ser-col">
+    <div class="card ser-col" style="border-radius: 20px;">
         <div class="card-body">
             {{#comparison quizzes.tcm "yes"}}
             <h6 class="text-muted">As you are educated about traditional chinese medicine and need no assistance, you can skip out on our face to face appointment.</h6>
