--- a/views/user/listUserVoucher.handlebars
+++ b/views/user/listUserVoucher.handlebars
@@ -1,7 +1,10 @@
 <body>
   {{!-- <div style="background-color: #F1EDE5;"> --}}
     {{#if vouchers}}
-    <h4>VOUCHERS</h4>
+    <h4>VOUCHERS &nbsp &nbsp 
+      <a class="btn btn" href="../cart/cart">
+                        <span class="fa-solid fa-circle-arrow-right"></span> Go To Cart</a></h4>
+    
     {{!-- <div class="container-fluid">
       <div class="card shadow mb-4">
         <div class="card-header py-3" style="background-color:#8BAD97;">
