--- a/views/user/profile.handlebars
+++ b/views/user/profile.handlebars
@@ -1,7 +1,31 @@
 {{!-- <div class="container besidenav" style="padding-left:70px; width:max-content;"> --}}
 
+
+	<!-- Logout Modal-->
+	<div class="modal fade" id="deleteuserprofile" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+		aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Delete
+						Account</h5>
+					<button class="close" type="button" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">×</span>
+					</button>
+				</div>
+				<div class="modal-body">Select "Delete" below if you are
+					deleting your account.</div>
+				<div class="modal-footer">
+					<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+					<a class="btn btn-primary" href="/user/deleteaccount/{{id}}">Delete</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+
 	<div>
-				<div style="font-size:20px;  float: right;">
+		<div style="font-size:20px;  float: right;">
 			<div>
 				<a href="/user/editprofile/{{id}}" class="card-link mb-2">
 					<i class="fas fa-pencil-alt"></i>
@@ -17,7 +41,8 @@
 			</div>
 			<hr>
 			<div>
-				<a href="/user/deleteaccount/{{id}}" class="card-link" style="color:darkred" data-toggle="confirmation" data-title="Confirm delete?">
+				<a href="/user/editprofile/{{id}}" data-toggle="modal" data-target="#deleteuserprofile" class="card-link"
+			style="color: darkred">
 					<i class="far fa-trash-alt"></i>
 					Delete Account
 				</a>
@@ -34,53 +59,39 @@
 				First Name : <a> &emsp;&emsp;&emsp;{{firstname}} </a>
 
 			</div>
-<hr>
+			<hr>
 			<div>
 				Last Name : <a>&emsp;&emsp;&emsp;{{lastname}} </a>
 
 			</div>
-<hr>
+			<hr>
 			<div>
 				Username : <a>&emsp;&emsp;&emsp;{{username}} </a>
 
 			</div>
-<hr>
+			<hr>
 			<div>
 				Phone Number : <a>&emsp;&emsp;&emsp;{{phoneno}} </a>
 
 			</div>
-<hr>
+			<hr>
 			<div>
 				Address : <a>&emsp;&emsp;&emsp;{{address}} </a>
 
 			</div>
-<hr>
+			<hr>
 			<div>
 				Email : <a>&emsp;&emsp;&emsp;{{email}} </a>
 
 			</div>
-<hr>
+			<hr>
 		</div>
 	</div>
 
-	{{!-- <div class="accordion" id="storyAccordion">
-		<div class="card-header" id="headingOne">
-			<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne{{id}}"
-				aria-expanded="false" aria-controls="collapseOne{{id}}" style="text-decoration: none;">
-				Story <i class="fas fa-chevron-down"></i>
-			</button>
-		</div>
-		<div id="collapseOne{{id}}" class="collapse" aria-labelledby="headingOne" data-parent="#storyAccordion">
-			<div class="card-body">
-				{{story}}
-			</div>
-		</div>
-	</div> --}}
-	{{!--
-</div> --}}
 
-<script>
-	$('[data-toggle=confirmation]').confirmation({
-		rootSelector: '[data-toggle=confirmation]',
-	});
-</script>
+
+	<script>
+		$('[data-toggle=confirmation]').confirmation({
+			rootSelector: '[data-toggle=confirmation]',
+		});
+	</script>
