--- a/views/booking/editBooking.handlebars
+++ b/views/booking/editBooking.handlebars
@@ -2,7 +2,7 @@
     <div class="col-md-6 mx-auto">
         <div class="card card-body" style="border-radius: 60px ; top: 20px; right:40px;">
             <img class="logo" src="/img/logo.png">
-            <h3 class="text-center" style="padding-top: 15px;">Book a service</h3>
+            <h3 class="text-center" style="padding-top: 15px; color:#8BAD97;">Edit a booking</h3>
             <form action="" method="post">
                 <div>
                     <div class="form-group left spacing1">
@@ -44,7 +44,7 @@
 						</div>                    
 					</div>
                 <div class=" centered clear" style="padding-top:25px;">
-                    <button type="submit" class="staffbtn" >Book Service</button>
+                    <button type="submit" class="staffbtn" >Save</button>
                 </div>
 
             </form>
