cart final version 1.0

--- a/views/product/catalogue.handlebars
+++ b/views/product/catalogue.handlebars
@@ -47,6 +47,7 @@
                                 <div>
                                     <div>
                                         <form action="" method="post">
+                                        {{!-- <a href="/product/itemDesc/{{id}}" class="title mb-2"><i class="fa fa-cart-plus"></i>Details</a> --}}
                                             <button id="btnSubmit" type="submit" class="btn btn-outline-danger addToCart">
                                                 <i class="fa fa-cart-plus"></i>Add to cart
                                             </button>
