--- a/views/user/listOrder.handlebars
+++ b/views/user/listOrder.handlebars
@@ -33,7 +33,7 @@
                             <form>
                                 <div class="d-none d-sm-inline-block form-inline navbar-search "
                                     style='padding-bottom: 20px;'>
-                                    <div class="input-group">
+                                    {{!-- <div class="input-group">
                                         <input type="text" class="form-control bg-light bvoucher-0 small"
                                             placeholder="Newsletter ID..." aria-label="Search"
                                             aria-describedby="basic-addon2" id='search-voucher'>
@@ -43,7 +43,7 @@
                                                 <i class="fas fa-search fa"></i>
                                             </button>
                                         </div>
-                                    </div>
+                                    </div> --}}
                                 </div>
                             </form>
                         </div>
@@ -62,7 +62,7 @@
                         <input type="radio" name="slider" id="past">
                         {{!-- <input type="radio" name="slider" id="help"> --}}
 
-                        <nav>
+                        {{!-- <nav>
                             <label for="draft" class="draft" data-rel="1"><i class="fa-solid fa-pen-ruler"></i>Current
                                 Orders</label>
                             <label for="scheduled" class="scheduled" data-rel="2"><i
@@ -72,7 +72,7 @@
                                     class="fa-solid fa-clock-rotate-left"></i>Past
                                 Orders</label>
                             <div class="slider"></div>
-                        </nav>
+                        </nav> --}}
 
                         <!-- Section: Draft -->
                         <section>
