--- a/views/cart/cart.handlebars
+++ b/views/cart/cart.handlebars
@@ -4,11 +4,19 @@
             var sum = 0;
             //get price of each product
             var obj = document.getElementsByClassName("price");
+            var shipping = document.getElementsByClassName("shipping");
+            console.log("price:" + obj)
             var arr = new Array();
+            var s_arr = new Array();
             for (var i = 0; i < obj.length; i++) {
-                arr[i] = parseFloat(obj[i].innerHTML);
+                arr[i] = parseFloat(obj[i].innerHTML)
             }
-            console.log(arr);
+            for (var i = 0; i < shipping.length; i++) {
+                s_arr[i] = parseFloat(shipping[i].innerHTML);
+            }
+            console.log("shipping:" + s_arr);
+
+
             //get sum of aall products
             function getSumForEach(arr) {
                 arr.forEach(function (item) {
@@ -17,11 +25,15 @@
                 });
                 return sum;
             }
-            sum = getSumForEach(arr);
-            console.log(sum);
-            var shipping = 12;
+
+
+            var sum = arr.reduce((a, b) => a + b, 0)
+            var shipping_sum = s_arr.reduce((a, b) => a + b, 0)
+
+            console.log(shipping_sum);
             var GST = parseFloat(sum) * 0.07
-            var afterGST = parseFloat(sum) + parseFloat(GST.toFixed(2)) + shipping;
+            var afterGST = parseFloat(sum) + parseFloat(GST.toFixed(2)) + shipping_sum;
+            document.getElementById("ship").innerHTML = "SG $" + shipping_sum;
             document.getElementById("afterGST").innerHTML = "SG $" + afterGST;
             document.getElementById("gst").innerHTML = "SG $" + GST.toFixed(2);
             document.getElementById("totalamount").value = afterGST;
@@ -76,6 +88,8 @@
                                 <input type="hidden" name="amount" value="{{amount}}">
                                 <input type="hidden" name="totalprice" value="{{totalprice}}">
                                 <input type="hidden" name="price" value="{{price}}">
+                                <input type="hidden" name="weight" value="{{weight}}">
+                                <input type="hidden" name="m_weight" value="{{m_weight}}">
                             </form>
                             <form action="" method="POST">
                                 <p class="amount text-muted">{{amount}}</p>
@@ -87,10 +101,13 @@
                                 <input type="hidden" name="amount" value="{{amount}}">
                                 <input type="hidden" name="totalprice" value="{{totalprice}}">
                                 <input type="hidden" name="price" value="{{price}}">
+                                <input type="hidden" name="weight" value="{{weight}}">
+                                <input type="hidden" name="m_weight" value="{{m_weight}}">
                             </form>
                         </div>
                         <p class="text-muted col-sm-3 col-md-3 col-lg-3">
                             SG $ <span class="price text-muted">{{totalprice}}</span>
+                            | W: <span class="shipping text-muted">{{weight}}</span>
                         </p>
                         <div class=" row col-sm-3 col-md-3 col-lg-3">
                             <form action="" method="POST" class=" col-sm-12 col-md-12 col-lg-12">
@@ -105,6 +122,7 @@
                     </div>
                 </div>
                 {{/each}}
+                <p class=" text-muted text-center">"W" means the Weight of this product(s)</p>
                 {{else}}
                 <div class="col-sm-12 col-md-12 col-lg-12" style="text-align: center;">
                     <h4>There is nothing in your
@@ -126,7 +144,7 @@
                 <hr size="12px" width="100%">
                 <div class="row">
                     <h5 class="col-sm-3" style="float: left;"><b>Shipping</b></h5>
-                    <p class="col-sm-3" style="float: right;">SG $12.00</p>
+                   <p class="col-sm-3" style="float: right;" id="ship"></p>
                 </div>
                 <hr size="12px" width="100%">
                 <div class="row">
