--- a/views/newsletter/editNewsletter.handlebars
+++ b/views/newsletter/editNewsletter.handlebars
@@ -105,7 +105,7 @@
 
                         <div class="form-group">
                             <label for="createdBy">Created By/ Modified By</label>
-                            <input class="form-control" type="text" id="createdBy" name="createdBy" value="{{newsletter.createdBy}}" required />
+                            <input class="form-control" type="text" id="createdBy" name="createdBy" value="{{newsletter.createdBy}}" readonly />
                         </div>
 
 
