Staff final version 1.0

--- a/views/cart/cart.handlebars
+++ b/views/cart/cart.handlebars
@@ -107,7 +107,7 @@
                         </div>
                         <p class="text-muted col-sm-3 col-md-3 col-lg-3">
                             SG $ <span class="price text-muted">{{totalprice}}</span>
-                            | W: <span class="shipping text-muted">{{weight}}</span>
+                            | S: <span class="shipping text-muted">{{weight}}</span>
                         </p>
                         <div class=" row col-sm-3 col-md-3 col-lg-3">
                             <form action="" method="POST" class=" col-sm-12 col-md-12 col-lg-12">
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 {{/each}}
-                <p class=" text-muted text-center">"W" means the Weight of this product(s)</p>
+                <p class=" text-muted text-center">"S" means the Shipping Fee of this product(s)</p>
                 {{else}}
                 <div class="col-sm-12 col-md-12 col-lg-12" style="text-align: center;">
                     <h4>There is nothing in your
