--- a/views/booking/addBooking.handlebars
+++ b/views/booking/addBooking.handlebars
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="padding-bottom: 35px;">
     <div class="col-md-6 mx-auto">
         <div class="card card-body" style="border-radius: 60px ; top: 20px; right:40px;">
             <img class="logo" src="/img/logo.png">
