voucher when expire max usage etc
cries

--- a/views/user/resetpass.handlebars
+++ b/views/user/resetpass.handlebars
@@ -1,4 +1,4 @@
-<div class="row">
+{{!-- <div class="row">
     {{!-- <div class="col-md-6 mx-auto"> --}}
         <div class="card card-body" style="background:#E8DCD0;">
             <a href="/user/profile" style="color: black ;float:left; padding-left:40px; font-size:large"><u> <i
@@ -26,4 +26,4 @@
             {{!--
         </div> --}}
     </div>
-</div>
+</div> --}}
