--- a/views/newsletter/listNewsletters.handlebars
+++ b/views/newsletter/listNewsletters.handlebars
@@ -38,13 +38,13 @@
                         <input type="radio" name="slider" checked id="draft">
                         <input type="radio" name="slider" id="scheduled">
                         <input type="radio" name="slider" id="past">
-                        {{!-- <input type="radio" name="slider" id="help"> --}}
+                        <input type="radio" name="slider" id="help">
                     
                         <nav>
                             <label for="draft" class="draft"><i class="fa-solid fa-pen-ruler"></i>Draft Newsletters</label>
                             <label for="scheduled" class="scheduled"><i class="fa-solid fa-calendar-check"></i>Completed Newsletters</label>
-                            <label for="past" class="past"><i class="fa-solid fa-clock-rotate-left"></i>Past Newsletters</label>
-                            {{!-- <label for="help" class="help"><i class="fas fa-ring"></i>Accessories</label> --}}
+                            <label for="past" class="past"><i class="fa-solid fa-business-time"></i>Scheduled Newsletters</label>
+                            <label for="help" class="help"><i class="fa-solid fa-clock-rotate-left"></i>Past Newsletters</label>
                     
                             <div class="slider"></div>
                         </nav>
@@ -366,23 +366,37 @@
                                                 <div class="modal" id="mysend_{{id}}">
                                                     <div class="modal-dialog">
                                                         <div class="modal-content">
-                        
-                                                            <!-- Modal Header -->
-                                                            <div class="modal-header">
-                                                                <h4 class="modal-title">Send Confirmation</h4>
-                                                                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                                                            </div>
-                        
-                                                            <!-- Modal body -->
-                                                            <div class="modal-body">
-                                                                Are you sure you want to send <span style="font-weight:bold;">Newsletter Issue:
-                                                                    {{newsletterName}}</span> to all subscribers ?
-                                                            </div>
+
+                                                            <form action="post">
+                                                                <!-- Modal Header -->
+                                                                <div class="modal-header">
+                                                                    <h4 class="modal-title">Schedule Newsletter Confirmation</h4>
+                                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                                                                </div>
+                                                                
+                                                                <!-- Modal body -->
+                                                                <div class="modal-body" style="text-align: center;">
+                                                                    {{!-- Are you sure you want to send <span style="font-weight:bold;">Newsletter Issue:
+                                                                        {{newsletterName}}</span> to all subscribers ? --}}
+                                                                    <h6>When do you want to send the newsletter to all subscribers ?</h6>
+
+                                                                    <br>
+                                                                
+                                                                    <div class="form-group align-items-center justify-content-center">
+                                                                        <label>Schedule A Date</label>
+                                                                        <br>
+                                                                        <a href="/newsletter/scheduleNewsletter/{{id}}" class="btn btn-warning">Schedule Now</a>
+                                                                        <br>
+                                                                        <br>
+                                                                        <h6>-------- OR --------</h6>
+                                                                        <br>
+                                                                        <a href="/newsletter/sendNewsletter/{{id}}" class="btn btn-danger">Send Now</a>
+                                                                    </div>
+                                                                </div>
+                                                            </form>
                         
                                                             <!-- Modal footer -->
                                                             <div class="modal-footer">
-                                                                <a href="/newsletter/sendNewsletter/{{id}}" class="btn btn-danger">Send</a>
-                        
                                                                 <button type="button" class="btn btn-secondary"
                                                                     data-bs-dismiss="modal">Cancel</button>
                                                             </div>
@@ -404,9 +418,121 @@
                             </div>
                         </section>
 
-                        <!-- Section: Sent -->
+                        <!-- Section: Schduled -->
                         <section>
                             <div class="content content-3" style="height: 400px;  overflow-y:scroll; overflow-x: hidden; border-style: none;">
+                                <table class="table table-borderless table-hover" style="border-style: none;">
+                                    <thead>
+                                        <tr class="font-weight-bold">
+                                            <th>Id</th>
+                                            <th>Name</th>
+                                            <th>Category</th>
+                                            <th>Status</th>
+                                            <th>Scheduled Date</th>
+                                            {{!-- <th>Created By/ Modified By</th>
+                                            <th>Date</th> --}}
+                                            <th colspan="1">Operations</th>
+                                        </tr>
+                                    </thead>
+                                    <br>
+                                    <tbody>
+                                        {{#if scheduleTab}}
+                                        {{#each scheduleTab}}
+                                        <tr style="border: solid; border-width: 1px 0;">
+                                            <td>{{id}}</td>
+                                            <td>{{newsletterName}}</td>
+                                            <td>{{category}}</td>
+                                            <td>
+                                                <p class="badge badge-success">{{status}}</p>
+                                            </td>
+                                            {{!-- <td>{{createdBy}}</td>
+                                            <td>{{updatedAt}}</td> --}}
+                                            {{!-- {% if product.get_status() == 'Low Stock' or product.get_status() == 'Out of Stock' %}
+                                            <td>
+                                                <p class="badge badge-danger">xcx</p>
+                                            </td>
+                                            {% else %}
+                                            <td>
+                                                <p class="badge badge-success">xccxcxcx</p>
+                                            </td>
+                                            {% endif %} --}}
+                                            <td>{{schedule}}</td>
+                        
+                                            <td>
+                                                <button type="button" title="View" class="btn btn-info" data-bs-toggle="modal"
+                                                    data-bs-target="#weModal_{{id}}">
+                                                    <i class="far fa-eye"></i>
+                                                </button>
+                        
+                                                <!-- Modal -->
+                                                <div class="modal fade" id="weModal_{{id}}" tabindex="-1" aria-labelledby="" aria-hidden="true">
+                                                    <div class="modal-dialog">
+                                                        <div class="modal-content">
+                                                            <div class="modal-header">
+                                                                <h5 class="modal-title" id="">Newsletter Detail</h5>
+                                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                                    aria-label="Close"></button>
+                                                            </div>
+                                                            <div class="modal-body">
+                                                                <div class="card border mb-3">
+                                                                    <a href="{{posterURL}}" data-title="{{title}}" data-toggle="lightbox"></a>
+                                                                    <img src="{{posterURL}}" class="card-img-top" alt="Picture"
+                                                                        onerror="this.src='/img/no-image.jpg'">
+                                                                    </a>
+                        
+                                                                    <ul class="list-group list-group-flush">
+                                                                        <li class="list-group-item">Id: {{id}}</li>
+                                                                        <li class="list-group-item">Newsletter Name: {{newsletterName}}</li>
+                                                                        <li class="list-group-item">Category: {{category}}</li>
+                                                                        <li class="list-group-item">Status: <p class="badge badge-success">
+                                                                                {{status}}</p>
+                                                                        </li>
+                                                                        {{!-- {% if product.get_status() == 'Low Stock' or product.get_status()
+                                                                        ==
+                                                                        'Out of Stock' %}
+                                                                        <li class="list-group-item float-right">Stock: {{
+                                                                            product.get_product_stock() }} <p class="badge badge-danger">{{
+                                                                                product.get_status() }}</p>
+                                                                        </li>
+                                                                        {% else %}
+                                                                        <li class="list-group-item float-right">Stock: {{
+                                                                            product.get_product_stock() }} <p class="badge badge-success">{{
+                                                                                product.get_status() }}</p>
+                                                                        </li>
+                                                                        {% endif %} --}}
+                                                                    </ul>
+                                                                    <div class="card-body">
+                                                                        Created on: {{createdAt}}
+                                                                        <br>
+                                                                        Created by: {{createdBy}}
+                                                                        <br>
+                                                                        <hr>
+                                                                        Modified on: {{updatedAt}}
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </td>
+                        
+                                        </tr>
+                                        {{/each}}
+                                        {{else}}
+                                        <div>
+                                            <td colspan="8" style="text-align:center;">
+                                                <h6 class="empty">You currently have no newsletters in the scheduled tab.</h6>
+                                            </td>
+                                        </div>
+                                        {{/if}}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </section>
+
+                        <!-- Section: Sent -->
+                        <section>
+                            <div class="content content-4" style="height: 400px;  overflow-y:scroll; overflow-x: hidden; border-style: none;">
                                 <table class="table table-borderless table-hover" style="border-style: none;">
                                     <thead>
                                         <tr class="font-weight-bold">
@@ -628,7 +754,7 @@
     nav .slider{
         position: absolute;
         height: 100%;
-        width: 33%;
+        width: 25%;
         left: 0;
         bottom: 0;
         z-index: 0;
@@ -641,16 +767,16 @@
         display: none;
     }
     #scheduled:checked ~ nav .slider{
-        left: 33.33%;
+        left: 25%;
     }
     #past:checked ~ nav .slider{
-        left: 66.66%;
+        left: 50%;
     }
-    {{!-- #help:checked ~ nav .slider{
-        left: 99%;
-    } --}}
+    #help:checked ~ nav .slider{
+        left: 75%;
+    }
     #about:checked ~ nav .slider{
-        left: 99.99%;
+        left: 100%;
     }
     section .content{
         display: none;
@@ -659,8 +785,8 @@
     #draft:checked ~ section .content-1,
     #scheduled:checked ~ section .content-2,
     #past:checked ~ section .content-3,
-    {{!-- #help:checked ~ section .content-4, --}}
-    #about:checked ~ section .content-4{
+    #help:checked ~ section .content-4,
+    #about:checked ~ section .content-5{
         display: block;
     }
     section .content .title{
@@ -691,6 +817,7 @@
 <script src="/js/demo/datatables-demo.js"></script> --}}
 
 {{!-- JavaScript Bundle with Popper --}}
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
